--- a/src/Components/Agency.css
+++ b/src/Components/Agency.css
@@ -53,3 +53,16 @@
     text-align: center;
     text-transform: uppercase;
 }
+@media screen and (max-width: 576px)  {
+    .agency_para{
+        line-height: 25px;
+        text-align: justify;
+    }
+
+}
+@media screen and (min-width: 576px) and (max-width:768px){
+    .agency_para{
+        line-height:25px ;
+        text-align: justify;
+    }
+}
