--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -5,7 +5,7 @@
 }
 .icons{
     
-display: flex;
+   display: flex;
    gap: 20px;
    justify-content: center;
    margin-bottom: 10px;
@@ -30,4 +30,10 @@ display: flex;
 }
 .footer ul li{
     text-decoration: underline;
+}
+@media screen and (max-width:576px){
+    .para{
+        width: 80%;
+        text-align: justify;
+    }
 }
