--- a/src/Components/HomeImage.css
+++ b/src/Components/HomeImage.css
@@ -19,10 +19,22 @@
     color: black;
     background-color: orange;
     text-transform: uppercase;
-  
-    
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+@media screen and (max-width: 576px)  {
+    .home_image::after{
+        font-size: 17px;
+        height: 30px;
+        
+    }
+}
+@media screen and (min-width: 576px) and (max-width:768px){
+    .home_image::after{
+        font-size: 20px;
+        height: 40px;
+        
+    }
 }
