modified css for mobile view

--- a/src/Components/Agency.css
+++ b/src/Components/Agency.css
@@ -55,8 +55,9 @@
 }
 @media screen and (max-width: 576px)  {
     .agency_para{
-        line-height: 25px;
+        line-height: 28px;
         text-align: justify;
+        width: 100%;
     }
 
 }
