--- a/src/Components/Services.css
+++ b/src/Components/Services.css
@@ -83,6 +83,9 @@
         width: 100%;
         text-align: center;
       }
+      .box p{
+        line-height: 25px;
+      }
 }
 @media screen and (min-width: 576px) and (max-width:768px){
     .boxes {
