--- a/src/Components/Properties.css
+++ b/src/Components/Properties.css
@@ -66,6 +66,9 @@
     transform: translate(-50%,-50%);
     
 }
+.read{
+    color: blue;
+}
 @media screen and (max-width: 576px)  {
     .card{
         width: 100%;
@@ -83,6 +86,9 @@
         top: 22px;
         left: 81%;
         transform: translate(-50%, -50%);
+      }
+      .card p{
+        line-height: 25px;
       }
 
 }
